--- a/BangDevLab/Base.lproj/Main.storyboard
+++ b/BangDevLab/Base.lproj/Main.storyboard
@@ -45,6 +45,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="vtF-Pw-un0" kind="show" id="4Xx-fx-Can"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -90,7 +93,33 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p8l-zp-E0O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="814" y="31"/>
+            <point key="canvasLocation" x="871" y="-245"/>
+        </scene>
+        <!--FlatUI Color2 View Controller-->
+        <scene sceneID="jWU-gj-Qre">
+            <objects>
+                <tableViewController id="vtF-Pw-un0" customClass="LBFlatUIColor2ViewController" customModule="BangDevLab" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="OQl-D4-BHt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="i3c-IM-9cm">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="i3c-IM-9cm" id="ozE-VH-U60">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="vtF-Pw-un0" id="ZiD-xx-qXy"/>
+                            <outlet property="delegate" destination="vtF-Pw-un0" id="XrA-ef-FEo"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="urs-Wt-H5k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="871" y="379"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qAs-s0-Lp1">
